--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
